--- a/src/styles.css
+++ b/src/styles.css
@@ -44,77 +44,10 @@
   /* Font family */
   --font-primary: "Kumbh Sans", sans-serif;
 
-  /* Font size */
-  --fs-base: 62.5%;
-  --fs-display-large: 5.7rem;
-  --fs-display-medium: 4.5rem;
-  --fs-display-small: 3.6rem;
-  --fs-headline-large: 3.2rem;
-  --fs-headline-medium: 2.8rem;
-  --fs-headline-small: 2.4rem;
-  --fs-title-large: 2.2rem;
-  --fs-title-medium: 1.6rem;
-  --fs-title-small: 1.4rem;
-  --fs-body-large: 1.6rem;
-  --fs-body-medium: 1.4rem;
-  --fs-body-small: 1.2rem;
-  --fs-label-large: 1.4rem;
-  --fs-label-medium: 1.2rem;
-  --fs-label-small: 1.1rem;
-
-  /* Line height */
-  --lh-base: 20px;
-  --lh-display-large: 64px;
-  --lh-display-medium: 52px;
-  --lh-display-small: 44px;
-  --lh-headline-large: 40px;
-  --lh-headline-medium: 36px;
-  --lh-headline-small: 32px;
-  --lh-title-large: 28px;
-  --lh-title-medium: 24px;
-  --lh-title-small: 20px;
-  --lh-body-large: 24px;
-  --lh-body-medium: 20px;
-  --lh-body-small: 16px;
-  --lh-label-large: 20px;
-  --lh-label-medium: 16px;
-  --lh-label-small: 16px;
-
   /* Font weight */
   --fw-regular: 400;
   --fw-medium: 500;
-
-  /* Letter spacing */
-  --ls-n-025: -0.25px;
-  --ls-p-010: 0.1px;
-  --ls-p-015: 0.15px;
-  --ls-p-025: 0.25px;
-  --ls-p-040: 0.4px;
-  --ls-p-050: 0.5px;
-
   /* Spacing */
-  --spacing-base: 4px;
-  --spacing-05: calc(var(--spacing-base) * 0.5);
-  --spacing-1: calc(var(--spacing-base) * 1);
-  --spacing-2: calc(var(--spacing-base) * 2);
-  --spacing-3: calc(var(--spacing-base) * 3);
-  --spacing-4: calc(var(--spacing-base) * 4);
-  --spacing-5: calc(var(--spacing-base) * 5);
-  --spacing-6: calc(var(--spacing-base) * 6);
-  --spacing-7: calc(var(--spacing-base) * 7);
-  --spacing-8: calc(var(--spacing-base) * 8);
-  --spacing-9: calc(var(--spacing-base) * 9);
-  --spacing-10: calc(var(--spacing-base) * 10);
-  --spacing-11: calc(var(--spacing-base) * 11);
-  --spacing-12: calc(var(--spacing-base) * 12);
-  --spacing-13: calc(var(--spacing-base) * 13);
-  --spacing-14: calc(var(--spacing-base) * 14);
-  --spacing-15: calc(var(--spacing-base) * 15);
-  --spacing-16: calc(var(--spacing-base) * 16);
-  --spacing-17: calc(var(--spacing-base) * 17);
-  --spacing-18: calc(var(--spacing-base) * 18);
-  --spacing-19: calc(var(--spacing-base) * 19);
-  --spacing-20: calc(var(--spacing-base) * 20);
 
   /* Box shadow */
   --shadow-1: 0px 1px 3px 1px #00000026, 0px 1px 2px 0px #0000004d;
@@ -154,7 +87,7 @@
 }
 
 html {
-  font-size: var(--fs-base);
+  font-size: 62.5%;
 }
 
 body {
